--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,6 @@
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/orm": "^2.9",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "*",
         "symfony/messenger": "*",
         "symfony/options-resolver": "*",
         "symfony/property-access": "*",
@@ -27,7 +25,9 @@
         "symfony/serializer": "*",
         "symfony/validator": "*"
     },
-    "require-dev": {},
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
     "config": {
         "sort-packages": true
     },
@@ -38,7 +38,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "SkriptManufaktur\\SimpleRestBundle\\": "tests/"
+            "SkriptManufaktur\\SimpleRestBundle\\Tests\\": "tests/"
         }
     }
 }
