--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/doctrine-bundle": "^2.4",
-        "doctrine/orm": "^2.9",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/orm": "^2.13",
         "symfony/messenger": "*",
         "symfony/options-resolver": "*",
         "symfony/property-access": "*",
@@ -30,7 +30,7 @@
         "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.7",
-        "symfony/security-core": "^6.0"
+        "symfony/security-core": "*"
     },
     "config": {
         "sort-packages": true
