--- a/composer.json
+++ b/composer.json
@@ -18,19 +18,19 @@
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/orm": "^2.16",
-        "symfony/messenger": "*",
-        "symfony/options-resolver": "*",
-        "symfony/property-access": "*",
-        "symfony/property-info": "*",
-        "symfony/serializer": "*",
-        "symfony/validator": "*"
+        "symfony/messenger": "^6.4|^7.0",
+        "symfony/options-resolver": "^6.4|^7.0",
+        "symfony/property-access": "^6.4|^7.0",
+        "symfony/property-info": "^6.4|^7.0",
+        "symfony/serializer": "^6.4|^7.0",
+        "symfony/validator": "^6.4|^7.0"
     },
     "require-dev": {
         "escapestudios/symfony2-coding-standard": "^3.13",
         "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^9.6",
         "squizlabs/php_codesniffer": "^3.7",
-        "symfony/security-core": "*"
+        "symfony/security-core": "^6.4|^7.0"
     },
     "config": {
         "sort-packages": true
