--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,10 +11,15 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
+    - name: Setup PHP 8.2
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.2'
+        tools: phpcs, phpstan, phpunit
+
     - uses: actions/checkout@v4
 
     - name: Validate composer.json and composer.lock
