--- a/composer.json
+++ b/composer.json
@@ -13,24 +13,24 @@
         }
     ],
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/doctrine-bundle": "^2.10",
-        "doctrine/orm": "^2.16|^3.1",
-        "symfony/messenger": "^6.4|^7.0",
-        "symfony/options-resolver": "^6.4|^7.0",
-        "symfony/property-access": "^6.4|^7.0",
-        "symfony/property-info": "^6.4|^7.0",
-        "symfony/serializer": "^6.4|^7.0",
-        "symfony/validator": "^6.4|^7.0"
+        "doctrine/doctrine-bundle": "^2.14",
+        "doctrine/orm": "^3.3",
+        "symfony/messenger": "^7.",
+        "symfony/options-resolver": "^7.3",
+        "symfony/property-access": "^7.3",
+        "symfony/property-info": "^7.3",
+        "symfony/serializer": "^7.3",
+        "symfony/validator": "^7.3"
     },
     "require-dev": {
-        "escapestudios/symfony2-coding-standard": "^3.13",
-        "phpstan/phpstan-symfony": "^1.3",
-        "phpunit/phpunit": "^9.6",
-        "squizlabs/php_codesniffer": "^3.7",
-        "symfony/security-core": "^6.4|^7.0"
+        "escapestudios/symfony2-coding-standard": "^3.15",
+        "phpstan/phpstan-symfony": "^2.0",
+        "phpunit/phpunit": "^10.5",
+        "squizlabs/php_codesniffer": "^3.13",
+        "symfony/security-core": "^7.3"
     },
     "config": {
         "sort-packages": true
