--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.14",
         "doctrine/orm": "^3.3",
-        "symfony/messenger": "^7.",
+        "symfony/messenger": "^7.3",
         "symfony/options-resolver": "^7.3",
         "symfony/property-access": "^7.3",
         "symfony/property-info": "^7.3",
@@ -26,7 +26,7 @@
         "symfony/validator": "^7.3"
     },
     "require-dev": {
-        "escapestudios/symfony2-coding-standard": "^3.15",
+        "escapestudios/symfony2-coding-standard": "^3.16",
         "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^10.5",
         "squizlabs/php_codesniffer": "^3.13",
@@ -57,6 +57,6 @@
             "php vendor/bin/phpcs"
         ],
         "phpunit-check": "php vendor/bin/phpunit",
-        "phpstan-check": "php vendor/bin/phpstan analyse --level 5 src"
+        "phpstan-check": "php vendor/bin/phpstan analyse --level 8 src"
     }
 }
