--- a/composer.json
+++ b/composer.json
@@ -13,24 +13,24 @@
         }
     ],
     "require": {
-        "php": ">=8.4",
+        "php": "^8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/doctrine-bundle": "^3.0",
-        "doctrine/orm": "^3.5",
-        "symfony/messenger": "^7.3",
-        "symfony/options-resolver": "^7.3",
-        "symfony/property-access": "^7.3",
-        "symfony/property-info": "^7.3",
-        "symfony/serializer": "^7.3",
-        "symfony/validator": "^7.3"
+        "doctrine/doctrine-bundle": "^3.2",
+        "doctrine/orm": "^3.6",
+        "symfony/messenger": "^7.4||^8.0",
+        "symfony/options-resolver": "^7.4||^8.0",
+        "symfony/property-access": "^7.4||^8.0",
+        "symfony/property-info": "^7.4||^8.0",
+        "symfony/serializer": "^7.4||^8.0",
+        "symfony/validator": "^7.4||^8.0"
     },
     "require-dev": {
-        "escapestudios/symfony2-coding-standard": "^3.16",
+        "escapestudios/symfony2-coding-standard": "^3.18",
         "phpstan/phpstan-symfony": "^2.0",
-        "phpunit/phpunit": "^10.5",
-        "squizlabs/php_codesniffer": "^3.13",
-        "symfony/security-core": "^7.3"
+        "phpunit/phpunit": "^12.5",
+        "squizlabs/php_codesniffer": "^4.0",
+        "symfony/security-core": "^7.4||^8.0"
     },
     "config": {
         "sort-packages": true
